# email-newsletter-app

./: .gitignore  Cargo.toml  Dockerfile  My-Learnings-So_Far(Non-Rust).txt  README.md  configuration.yaml  configurations.yaml  spec.yaml  sqlx-data.json
configurations/: base.yaml  production.yaml
migrations/: 20240920210729_create_subscription_table.sql  20241125082823_make_status_not_null_in_subscriptions.sql  20241125084029_create_subscription_tokens_table.sql  20241126144915_correct_column_name_in_subscription_tokens_table.sql  20241130142604_create_users_table.sql  20241210154011_create_idempotency_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: health_check_handler.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  mod.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
