[package]
name = "emailnewsletter"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"

[[bin]]
path="src/main.rs"
name="emailnewsletter"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
actix-web = { version = "4.4.0", default-features = false, features = ["macros"] }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "migrate", "uuid", "chrono"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.11"
dotenv = "0.15"
env_logger = "0.9"
log="0.4"
