[package]
name = "emailnewsletter"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"

[[bin]]
path="src/main.rs"
name="emailnewsletter"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json","rustls-tls"] }
actix-web = { version = "4.4.0", default-features = false, features = ["macros"] }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "migrate", "uuid", "chrono", "offline"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.11"
dotenv = "0.15"
tracing = { version="0.1" , features = ['log'] }
tracing-subscriber = { version="0.3", features = ["registry","env-filter"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
once_cell = "1"
secrecy = {version = "0.8", features = ["serde"]}
tracing-actix-web = "0.5"
serde-aux="3"
unicode-segmentation = "1"
claim = "0.5"
validator = "0.14"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"
linkify = "0.8"
rand = { version = "0.8", features=["std_rng"]}

